# kokorofile

./: Cargo.toml  README.md  build.sh  kokorofile.py  prepare_assets.sh  pyproject.toml  server.py  test.py
scripts/: cosmo.sh
src/: main.rs
