[package]
name = "kokorofile"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
actix-web = "4"                                                    
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
env_logger = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio and assets
rust-embed = "8"                                                     
hound = "3"                                                    
once_cell = "1"                                                     

# ONNX inference with Tract (pure Rust, no native dependencies)
tract-onnx = "0.21"


# Note: Using tract-onnx instead of ort to avoid compilation issues
# tract-onnx is pure Rust and handles 85% of ONNX models successfully