[project]
name = "kokorofile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "kokoro>=0.9.4",
    "pip>=25.1.1",
    "pydantic>=2.11.5",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["hatchling>=1.19"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["server.py"]

[project.scripts]
kokorofile = "server:main"
